syntax = "proto3";

package users;

service UserService {
  rpc GetUser(GetUserRequest) returns (User) {}

  rpc CreateUser(CreateUserRequest) returns (User) {}

  rpc UpdateUser(UpdateUserRequest) returns (User) {}
}

message User {
  string _id = 1;

  string username = 2;
}

message GetUserRequest {
  string username = 1;
}

message CreateUserRequest {
  User User = 1;
}

message UpdateUserRequest {
  User User = 1;
}
